# health-hub

./: .dockerignore  .env.example  .gitignore  Caddyfile.huggingface  Dockerfile  Dockerfile.local  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  SOURCES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  source-collector.yml  sync-huggingface.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
config/: disease_lexicon.json  fetch_policy.json  sources.yaml
data/authorised_surveillance/: README.md
data/boundaries/: LICENSE-CC-BY-2.5-IN.md  manifest.json
data/environment/: current_conditions.json  seasonal_outlook.json
data/epiclim/: audit.json
data/forecasting/: environment_block_ablation.json  environmental_suitability_model.json  public_hmis_malaria_model.json  reported_outbreak_model.json
data/gazetteer/: README.md  odisha_district_aliases.csv
data/public_health/: hmis_district_monthly.csv  hmis_manifest.json  ncvbdc_malaria_annual.csv  ncvbdc_manifest.json  odisha_disease_history.xlsx
data/synthetic/: forecast_report.json
data/templates/: authorised_surveillance_district_week.csv
pipelines/: __init__.py
pipelines/environmental/: __init__.py  current.py  districts.py  historical.py  imd.py  models.py  nasa_power.py  seasonal.py  states.py
pipelines/surveillance/: __init__.py  hmis.py  ncvbdc.py
reports/: acceptance.json
reports/environment/: latest.json
scripts/: audit_authorised_surveillance.py  audit_epiclim.py  build_boundaries.py  collect_environment.py  collect_public_health.py  collect_seasonal.py  doctor.py  export_disease_workbook.py  fetch_models.py  keepalive_backup.py  live_crawl_demo.py  make_synthetic.py  measure_memory.py  package_submission.py  postgres_smoke.py  quantize_translation_models.py  sample_walkthrough.py  start_huggingface.sh  train_authorised_forecast.py  train_public_outlook.py  trigger_collector.py  write_acceptance_report.py
services/api/: __init__.py  collection_runtime.py  database.py  evidence_agent.py  main.py  public_health.py
tests/: live_trilingual_probe.py  test_acquisition_defects.py  test_api.py  test_authorised_surveillance.py  test_collector.py  test_crawl_scale.py  test_current_conditions.py  test_data_assets.py  test_environment.py  test_environment_panel.py  test_evidence_agent.py  test_forecasting.py  test_imd.py  test_ingestion.py  test_nlp_stack.py  test_operational_forecasting.py  test_operations.py  test_public_health.py  test_real_forecast_api.py  test_real_forecasting.py  test_trilingual_extraction.py  test_workflow.py
tests/fixtures/: README.md  manifest.json
workers/: __init__.py
workers/ingestion/: __init__.py  assertions.py  connectors.py  dedup.py  diseases.py  fixture_pack.py  geography.py  idsp.py  language.py  models.py  parse.py  pipeline.py  redact.py  registry.py  robots.py  urls.py  (+1 more)
(+50 files in other folders)
